# finances-api

./: .env-example  .gitignore  .importlinter  .pre-commit-config.yaml  README.md  docker-compose.yml  main.py  pyproject.toml
.hooks/: check_branch_name.py
src/application/dto/: ExpenseDTO.py  ExtractDTO.py  IncomeDTO.py  NotebookDTO.py  PaginationDTO.py  ResponseDTO.py  ServiceErrorDTO.py  UserDTO.py
src/application/gateway/: IUserGateway.py
src/application/repositories/: IBaseRepository.py  IExpenseRepository.py  IIncomeRepository.py  INotebookRepository.py  IUserRepository.py
src/application/services/: UserService.py
src/application/usecases/expense/: CreateExpenseUseCase.py  DeleteExpenseUseCase.py  FindByExpenseUseCase.py  ListAllExpenseUseCase.py  UpdateExpenseUseCase.py
src/application/usecases/extract/: CreateExtractUseCase.py
src/application/usecases/income/: CreateIncomeUseCase.py  DeleteIncomeUseCase.py  FindByIncomeUseCase.py  ListAllIncomeUseCase.py  UpdateIncomeUseCase.py
src/application/usecases/notebook/: CreateNotebookUseCase.py  DeleteNotebookUseCase.py  FindByNotebookUseCase.py  ListAllNotebookUseCase.py  UpdateNotebookUseCase.py
src/application/usecases/user/: CreateUserUseCase.py  DeleteUserUseCase.py  FindByUserUseCase.py  ListAllUserUseCase.py  UpdateUserUseCase.py
src/application/utils/: NotebookUtils.py  error_handler.py
src/domain/models/: Expense.py  Income.py  Notebook.py  User.py
src/domain/models/enum/: ExpenseStatus.py
src/infra/config/: settings.py
src/infra/database/: MongoDBConection.py
src/infra/di/: Container.py
src/infra/gateway/: UserGateway.py
src/infra/middleware/: ExceptionMiddleware.py
src/infra/repositories/: BaseRepositoryMongo.py  ExpenseRepository.py  IncomeRepository.py  NotebookRepository.py  UserRepository.py
src/infra/router/: routers.py
src/infra/router/endpoint/: expenses.py  extracts.py  incomes.py  notebook.py  notebooks.py  users.py
